// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DocxLoader > should aggregate content correctly > aggregated_content 1`] = `
"Masterino fixture report



Subtitle



This DOCX fixture verifies Word extraction in CI.



It intentionally stays small so repository tests do not depend on external documents.



Second page marker

"
`;

exports[`DocxLoader > should load pages correctly from a DOCX file 1`] = `
[
  {
    "charCount": 203,
    "lineCount": 19,
    "metadata": {
      "pageNumber": 1,
    },
    "pageContent": "Masterino fixture report



Subtitle



This DOCX fixture verifies Word extraction in CI.



It intentionally stays small so repository tests do not depend on external documents.



Second page marker

",
  },
]
`;
